chore: Add `requirements.txt` and expand `.gitignore` with common development and environment patterns.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
+# Virtual Environments
 venv/
+.venv/
+ENV/
+env/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# IDEs
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Project
+*.log
+.env
